examples/pos/issue319.effekt
import array

def main() = {
  val array = array::fromList([1,2,3]);
  inspect(array.toList)
}
