examples/neg/parsing/invalid-lit-list-pattern.effekt
val _ = [] match {
  case [] => ()
  case [1, [2, 3)] => ()
  case _ => ()
}